Fix font weight on submit button on iOS

--- a/src/stylesheets/form.scss
+++ b/src/stylesheets/form.scss
@@ -83,6 +83,12 @@ input {
         .modal-button:focus {
           margin-left: 8px;
         }
+        .modal-button[type=submit],
+        .modal-button[type=submit]:hover,
+        .modal-button[type=submit]:active,
+        .modal-button[type=submit]:focus {
+          font-weight: 400;
+        }
       }
     }
   }
